--- a/generic.html
+++ b/generic.html
@@ -52,15 +52,15 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Live at the Art Circle, It's the (alternative) NU Tour Guides!</h1>
+							<h1>Live at the Arts Circle, It's the (alternative) NU Tour Guides!</h1>
 							<h2>A location-based QR code project</h2>
-							<h3><i>Recorded April 5th, 2017</i></h3>
+							<h3><i>The video is best viewed full-screen on a mobile device with the screen rotation locked. &ndash; Recorded April 5th, 2017</i></h3>
 							<div style="position:relative;height:100%;padding-bottom:50.0%;">
 								<iframe src="https://www.youtube.com/embed/Cg0S_O51Kr4?rel=0?ecver=2" width="480" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;" allowfullscreen>
 								</iframe>
 							</div>
 							<p>Ever wondered what it's like being a Northwestern tour guide? Well, it doesn't matter.
-								 Today you will take on the role of a lifetime and give a unique tour of the sites around the Art Circle!
+								 Today you will take on the role of a lifetime and give a unique tour of the sites around the Arts Circle!
 								 Don't worry. There aren't actual people waiting for you outside. Instead, we're going to stream this live on Facebook (weather permitting) for all the prospies and their families to see !
 								 After this onboarding process, we will be taking our positions at our respective locations and scanning the QR codes that are there to receive our final instructions.
 </p>
