--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 ---
 layout: default
 ---
+<!--
+Website design:
+	Phantom by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
+Site Structure:
+	Adapted from exercise files for a Lynda.com tutorial on Jekyll by James Williamson
+
+  Last updated 4/7/2017 by Khoa Truong
+-->
 <main role="main" id="main">
   <div class="inner">
     <header>
-      <h1><!--[-->This template is fancy af.<!--]--><br />
-          <!--[-->(website under construction)<!--]--></h1>
-      <p>This is a temporary site to hold some projects I am working on. Feel free to click around.</p>
+      <h1><!--[-->Khoa Truong<!--]--></h1>
+      <h2><!--[-->(website under construction)<!--]--></h2>
+      <p>This is a site to display some projects on which I have worked. Some posts are incomplete, but will be filled in soon. Click on "Khoa." above to return to this page from any post.</p>
     </header>
-
+{% assign styleNum = 0 %}
+{% assign imageNum = 0 %}
   <section class="tiles"> {% for post in paginator.posts limit:6 %}
     <!-- Go through different styles starting with style0 -->
-    <article class="style{% increment sNum %}">
+    <article class="style{{styleNum}}">
       <span class="image">
-        <img src="{{site.baseurl}}/assets/images/pic{% increment pNum %}.jpg" alt="" />
+        <img src="{{site.baseurl}}/assets/images/pic{{imageNum}}.jpg" alt="" />
       </span>
       <a href="{{site.baseurl}}{{post.url}}" rel="bookmark" title="Permanent Link to {{site.baseurl}}{{post.url}}">
         <h2>{{post.title}}</h2>
@@ -23,9 +35,18 @@ layout: default
         </div>
       </a>
     </article>
+    <!-- There are 6 styles -->
+    {% if styleNum < 6 %}
+    {% assign styleNum = styleNum | plus: 1 %}
+    {% endif %}
+    <!-- There are 11 images  -->
+    {% if styleNum < 11 %}
+    {% assign imageNum = imageNum | plus: 1 %}
+    {% endif %}
 
     {% endfor %}
-    <div class="pagination"> {% if paginator.previous_page %}
+  </section>
+    <div class="pagination" > {% if paginator.previous_page %}
       {% if paginator.previous_page == 1 %}
       <p class="prevLink"><a href="{{site.baseurl}}/" class="previous">newer entries</a></p>
       {% else %}
@@ -35,8 +56,7 @@ layout: default
       {% if paginator.next_page %}
       <p class="nextLink"><a href="{{ site.baseurl }}/project/page{{ paginator.next_page }}" class="next">older entries</a></p>
       {% endif %} </div>
-  </section>
-  {% include sidebar.html %}
+  <!-- include sidebar.html -->
   </div>
 
 </main>
